--- a/docs/_includes/disclaimer.html
+++ b/docs/_includes/disclaimer.html
@@ -1,5 +1,5 @@
 <div class="disclaimer" role="contentinfo">
   <small>
-    <p>This website is maintained by Zagd3m, a simple member of the Project Diablo 2 community, not affiliated to the "team". For more information about the mod, visit the official Project Diablo 2 website. Note that the changes written here aren't real at all, this is a kind of big feedback message like the ones in Discord's #feedback thread, but in a website way. Nerds.</p>
+    <p>This website is maintained by Zagd3m, a simple member of the Project Diablo 2 community (not affiliated to the "team"). The changes described here aren't live, real, official, or anything at all. This website is a kind of big feedback message, like the ones in Discord's #feedback thread, but in a website, well, nerdy, way.</p>
   </small>
 </div>
