--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -66,9 +66,9 @@ footer {
   margin-top: 2rem;
   
   .disclaimer {
-    max-width: 800px;
+    max-width: 1000px;
     margin: 0 auto;
-    padding: 1rem;
+    padding: 0.5rem;
     color: #666;
     text-align: center;
     
@@ -77,7 +77,7 @@ footer {
     }
     
     small {
-      font-size: 0.9rem;
+      font-size: 0.8rem;
     }
   }
 }
@@ -105,5 +105,18 @@ a {
   
   &:hover {
     text-decoration: underline;
+  }
+}
+
+// Images
+img[alt="Scroll"] {
+  display: block;
+  max-width: 200px;
+  margin: 2rem auto;
+  opacity: 0.8;
+  transition: opacity 0.3s;
+  
+  &:hover {
+    opacity: 1;
   }
 }
