--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,6 +5,7 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
     {% include head-custom.html %}
+    <meta name="google-site-verification" content="2_lo-3fJXQDx99Bix5qhtAsfODlct8lLBagxAYiu3Ys" />
     {% seo %}
   </head>
   <body>
