--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -103,15 +103,15 @@ footer {
 //   margin-bottom: 1rem;
 // }
 
-// Links
-// a {
-//   color: #0366d6;
-//   text-decoration: none;
+Links
+a {
+  color: #0366d6;
+  text-decoration: none;
   
-//   &:hover {
-//     text-decoration: underline;
-//   }
-// }
+  &:hover {
+    text-decoration: underline;
+  }
+}
 
 // // Images
 // img[alt="Scroll"] {
