--- a/docs/_includes/navigation.html
+++ b/docs/_includes/navigation.html
@@ -2,7 +2,7 @@
   <ul>
     {% for item in site.data.navigation %}
       <li class="nav-item{% if page.url == item.link %} active{% endif %}">
-        <a href="{{ item.link }}">{{ item.name }}</a>
+        <a href="{{ site.baseurl }}{{ item.link }}">{{ item.name }}</a>
       </li>
     {% endfor %}
   </ul>
