--- a/docs/_layouts/build.html
+++ b/docs/_layouts/build.html
@@ -1,9 +1,6 @@
 ---
+layout: default
 ---
-<main>
-  {% include navigation.html %}
-  <h1>{{ page.title }}</h1>
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css">
-  {% if page.summary %}<p>{{ page.summary }}</p>{% endif %}
-  {{ content }}
-</main>
+<h1>{{ page.title }}</h1>
+{% if page.summary %}<p>{{ page.summary }}</p>{% endif %}
+{{ content }}
