--- a/docs/_sass/main.scss
+++ b/docs/_sass/main.scss
@@ -180,8 +180,11 @@ blockquote {
   }
   
   .site-nav .nav-item a {
-    padding: 0.75rem 1rem;
-    font-size: 1.1rem;
+    padding: 0.75rem 0.5rem;
+    font-size: 1rem;
+    text-align: center;
+    word-break: break-word;
+    hyphens: auto;
   }
   
   main {
